--- a/src/scss/videoplayer.scss
+++ b/src/scss/videoplayer.scss
@@ -38,3 +38,15 @@ section {
     right: 15%;
     z-index: 1;
 }
+
+.chatbox-container {
+    margin: auto;
+    width: 100%;
+	max-height: 350px;
+	overflow: scroll;
+	border-style: none;
+}
+
+.hide-chat {
+    display: none;
+}
