--- a/src/scss/videoplayer.scss
+++ b/src/scss/videoplayer.scss
@@ -21,6 +21,14 @@ section {
             width: calc(100% - 20px) !important;
         }
 
+        #blubber_threads > .posting > .avatar {
+           display: none !important;
+        }
+
+        #blubber_threads > .posting > .content_column {
+            padding-left: 15px !important;
+         }
+
         .blubber_thread .writer > textarea {
             width: calc(100% - 140px) !important;
         }
@@ -60,7 +68,7 @@ section {
     margin: auto;
     width: 100%;
 	max-height: 350px;
-	overflow: scroll;
+	overflow-y: auto;
 	border-style: none;
 }
 
