Hide player and show message when there is no stream and minor fixes

--- a/src/scss/videoplayer.scss
+++ b/src/scss/videoplayer.scss
@@ -72,6 +72,10 @@ section {
 	border-style: none;
 }
 
-.hide-chat {
+.no-current-stream {
+    margin: 2em;
+}
+
+.hide-chat, .no-current-stream {
     display: none;
 }
