copy to clipboard, fixes #15

--- a/src/scss/livestream.scss
+++ b/src/scss/livestream.scss
@@ -63,3 +63,15 @@ section {
         }
     }
 }
+form {
+    &.livestreaming-player-info {
+        div.messagebox {
+            display: none;
+        }
+        fieldset {
+            label {
+                cursor: default;
+            }
+        }
+    }
+}
