--- a/src/scss/videoplayer.scss
+++ b/src/scss/videoplayer.scss
@@ -1,8 +1,7 @@
-@import 'video.js/dist/video-js.min.css';
+@import 'openplayerjs/dist/openplayer.min.css';
 
 section {
     .video-container {
-        margin: 2em !important;
         #stream_video {
             margin: auto;
         }
@@ -16,7 +15,8 @@ section {
             margin: 1em;
             text-align: center;
         }
-
+    }
+    .blubber-container {
         #blubber_threads > .posting > .writer > textarea{
             width: calc(100% - 20px) !important;
         }
@@ -43,17 +43,6 @@ section {
     z-index: 0;
 }
 
-.zoom-info {
-    color: silver;
-    font-size: x-large;
-    position: absolute;
-    margin: auto;
-    top: 25%;
-    left: 15%;
-    right: 15%;
-    z-index: 1;
-}
-
 .blubber_panel {
     max-height: 400px;
     overflow: auto;
@@ -74,4 +63,112 @@ section {
 
 .no-current-stream {
     margin: 2em;
+}
+
+/** ZOOM **/
+
+.zoom-styles {
+    display: none;
+}
+
+#zoom-info-main {
+    display: none;
+    color: silver;
+    text-align: center;
+    font-size: x-large;
+    position: absolute;
+    margin: auto;
+    top: 25%;
+    left: 15%;
+    right: 15%;
+    z-index: 1;
+}
+
+// video {
+//     transition: all 0.2 ease;
+// }
+.op-control__main {
+    display: flex;
+    position: absolute;
+    top: 30px;
+    left: 50%;
+    background: transparent;
+    border: none;
+}
+.op-control__main:last-of-type {
+    left: calc(50% - 50px);
+}
+.zoom-container {
+    position: absolute;
+    right: 0;
+    width: 120px;
+    height: 68px;
+    margin: 5px;
+    box-sizing: border-box;
+    box-shadow: 0 0 3px 0 black;
+    border-radius: 2px;
+    top: 0;
+    user-select: none;
+    display: none;
+}
+.zoom-rect {
+    background-color: rgba(255, 255, 255, 0.5);
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: 1px solid #0e0e0e;
+    width: 100%;
+    height: 100%;
+}
+.zoom-layer {
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.op-zoom {
+    opacity: 0.2;
+    background: white;
+    font-size: 2em;
+    padding: 0 4px 0 4px;
+    box-shadow: 2px 2px 5px 0 black;
+    width: 32px;
+    height: 32px;
+    position: absolute;
+    top: 10px;
+    left: 50%;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.op-zoom:hover {
+    opacity: 1;
+}
+
+.op-zoom:last-of-type {
+    left: calc(50% - 45px);
+}
+
+.op-controls__zoom {
+    visibility: hidden;
+}
+
+#zoom-menu {
+    .op-settings__menu-item {
+        cursor: pointer;
+    }
+}
+
+@media (min-width: 501px) {
+    .op-controls__zoom {
+        visibility: visible;
+    }
+
+    .zoom-container {
+        display: block;
+    }
 }
